--- a/admin/config.yml
+++ b/admin/config.yml
@@ -134,6 +134,68 @@ collections:
         - {name: 'title', label: 'Title', widget: 'string', required: false}
         - {name: 'text', label: 'Text', widget: 'markdown', required: false}
 
+    - name: 'footer'
+      label: 'Footer'
+      file: '_data/footer.yml'
+      fields:
+      - name: 'block_1'
+        label: 'Block 1'
+        widget: 'object'
+        fields:
+        - {name: 'title', label: 'Title', widget: 'string', required: false}
+        - name: 'items'
+          label: 'Items'
+          widget: 'list'
+          fields:
+          - {name: 'title', label: 'Title', widget: 'string', required: false}
+          - {name: 'link', label: 'Link', widget: 'string', required: false}
+      - name: 'block_2'
+        label: 'Block 2'
+        widget: 'object'
+        fields:
+        - {name: 'title', label: 'Title', widget: 'string', required: false}
+        - name: 'items'
+          label: 'Items'
+          widget: 'list'
+          fields:
+          - {name: 'title', label: 'Title', widget: 'string', required: false}
+          - {name: 'link', label: 'Link', widget: 'string', required: false}
+      - name: 'block_3'
+        label: 'Block 3'
+        widget: 'object'
+        fields:
+        - {name: 'title', label: 'Title', widget: 'string', required: false}
+        - name: 'items'
+          label: 'Items'
+          widget: 'list'
+          fields:
+          - {name: 'title', label: 'Title', widget: 'string', required: false}
+          - {name: 'link', label: 'Link', widget: 'string', required: false}
+      - name: 'block_4'
+        label: 'Block 4'
+        widget: 'object'
+        fields:
+        - {name: 'title', label: 'Title', widget: 'string', required: false}
+        - name: 'items'
+          label: 'Items'
+          widget: 'list'
+          fields:
+          - {name: 'title', label: 'Title', widget: 'string', required: false}
+          - {name: 'link', label: 'Link', widget: 'string', required: false}
+        - name: 'socials'
+          label: 'Social Links'
+          widget: 'list'
+          fields:
+          - {name: 'icon', label: 'Icon', widget: 'image', required: false}
+          - {name: 'link', label: 'Link', widget: 'string', required: false}
+      - name: 'block_5'
+        label: 'Block 5'
+        widget: 'object'
+        fields:
+        - {name: 'title', label: 'Title', widget: 'string', required: false}
+        - {name: 'term_link', label: 'Link Term of Use', widget: 'string', required: false}
+        - {name: 'policy_link', label: 'Link Privacy Policy', widget: 'string', required: false}
+        - {name: 'contact_link', label: 'Link Contact Us', widget: 'string', required: false}
 
   - name: 'website_pages'
     label: 'Website Pages'
