--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -44,13 +44,13 @@ block_4:
     - title: Customer Support 
       link: /support
   socials:
-    - icon: facebook
+    - name: facebook
       link: #
-    - icon: twitter
+    - name: twitter
       link: #
-    - icon: linkedin
+    - name: linkedin
       link: #
-    - icon: youtube
+    - name: youtube
       link: #
 
 block_5:
