Update Website  Common Information “kick_start”

--- a/_data/pages/kick_start.yml
+++ b/_data/pages/kick_start.yml
@@ -5,16 +5,16 @@ block_0:
     title: 75+ More Languages
   color_overlay: 'rgba(50, 50, 50, 0)'
   items:
-    - icon: /assets/images/upload/987-200.png
+    - icon: /assets/images/upload/51vqmvwgzml._sl1500_.jpg
       link: '#'
       title: Chinese to Vietnamese
-    - icon: /assets/images/upload/987-200.png
+    - icon: /assets/images/upload/41dkt4dm17l._sx425_.jpg
       link: '#'
       title: Korean to Vietnamese
-    - icon: /assets/images/upload/987-200.png
+    - icon: /assets/images/upload/1200px-flag_of_japan.svg.png
       link: '#'
       title: Japanese to Vietnamese
-    - icon: /assets/images/upload/987-200.png
+    - icon: /assets/images/upload/0_o0-6o1w1dkmi5lbx.png
       link: '#'
       title: English to Vietnamese
   text: We cover translations for 120 languages for a smooth global transition
