Update Website  Common Information “kick_start”

--- a/_data/pages/kick_start.yml
+++ b/_data/pages/kick_start.yml
@@ -2,7 +2,7 @@ block_0:
   background_image: ''
   button:
     link: '#'
-    title: 75+ More Languages
+    title: More Vietnamese Language Pairs
   color_overlay: 'rgba(50, 50, 50, 0)'
   items:
     - icon: /assets/images/upload/51vqmvwgzml._sl1500_.jpg
