Update Website Pages “home_page_information”

--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -38,14 +38,14 @@ block_3:
   background_image: ''
   color_overlay: 'rgba(50, 50, 50, 0)'
   items:
-    - icon: /assets/images/upload/business-icon.png
+    - icon: /assets/images/upload/1_gztfphmxf03765dlvaxohg.png
       text: >-
         We have specially designed packages to address the translation needs of
         all our customers. Our affordable and competitive prices start from
         $0.06/word so that all the businesses can pursue their dream of going
         global.
       title: Rates
-    - icon: /assets/images/upload/749128-200.png
+    - icon: /assets/images/upload/the-importance-of-quality-assurance_374647951.jpg
       text: >-
         We know what your business means to you, so we want to deliver the best
         to you. Our robust quality assurance system is specially designed to
