Update Website Pages “home_page_information”

--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -13,8 +13,7 @@ block_2:
         We provide Human Vietnamese Translation Services for all industries,
         delivered with the highest accuracy and fast-turnaround time! Our
         professional translator and projects managers follow a strict quality
-        control process, ensuring the best results and the highest customer
-        satisfaction.
+        control process, ensuring the highest customer satisfaction.
       title: 'Translation Services '
     - icon: /assets/images/upload/120100.png
       text: >-
