Update Website Pages “home_page_information”

--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -24,11 +24,10 @@ block_2:
       title: Certified Translation Services
     - icon: /assets/images/upload/pencil-icon-png-16.png
       text: >-
-        JNDC - Translation is a leading Vietnamese proofreading services, we
-        provide professional proofreading services to academics to business of
-        all sizes. Our proofreader have at least 5 years of experiences in
-        providing proofreading services and ensuring the highest quality to our
-        customer
+        We are a leading Vietnamese proofreading services, we provide
+        professional proofreading services to academics to business of all
+        sizes. Our proofreader have at least 5 years of experiences in providing
+        proofreading services and ensuring the highest quality to our customer
       title: Proofreading Services
   text: ''
   title: OUR COURCE SERVICES
