Update Website Pages “home_page_information”

--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -17,10 +17,10 @@ block_2:
       title: 'Translation Services '
     - icon: /assets/images/upload/120100.png
       text: >-
-        We provide the best Vietnamese Certified Translation with highest
-        quality, fast - turnaround time. Our translator are Vietnamese Expert in
-        different fields providing flawless and mirror-image certified
-        translations, affidavits.
+        JNDC Translation provided the best Vietnamese Certified Translation with
+        highest quality, fast - turnaround time. Our translator are Vietnamese
+        Experts in different fields providing flawless and mirror-image
+        certified translations, affidavits.
       title: Certified Translation Services
     - icon: /assets/images/upload/pencil-icon-png-16.png
       text: >-
