Update Website Pages “about_page_information”

--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -72,7 +72,7 @@ block_5:
     - icon: >-
         /assets/images/upload/kissclipart-skills-icon-transparent-clipart-computer-icons-ski-2b534be31097f804.png
       text: ''
-      title: Exellent in translation skills
+      title: Our Translators have exellent translation skills
     - icon: /assets/images/upload/23614102untitled-3-512.png
       text: ''
       title: Our translator are all native speaker
