--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -78,7 +78,8 @@ block_5:
     - icon: /assets/images/upload/recruit_734177.png
       text: ''
       title: Our translators are recruited strictly
-    - icon: /assets/images/upload/knowledge-icon-20.png
+    - icon: >-
+        /assets/images/upload/294b526de0f9dbecf3b6dabc51e0df39_brains-clipart-simple-pencil-and-in-color-brains-clipart-simple_1000-1000.png
       text: ''
       title: Deep knowledge in translation fields
   text: >-
