--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -72,7 +72,8 @@ block_5:
     - icon: /assets/images/upload/skills-icon-png-3.png
       text: ''
       title: Our translators have exellent translation skills
-    - icon: /assets/images/upload/23111256untitled-3-512.png
+    - icon: >-
+        /assets/images/upload/american-indian-chief-vector-illustration_91-2147487397.jpg
       text: ''
       title: Our translators are all native speaker
     - icon: /assets/images/upload/recruit_734177.png
