--- a/_data/pages/pricing.yml
+++ b/_data/pages/pricing.yml
@@ -1,107 +1,91 @@
 block_1:
-  background_image: /assets/images/upload/d923dbbf84f549bb2d91ba8cf91461a8.jpg
+  background_image: /assets/images/upload/vietnam.jpg
+  button:
+    link: '#'
   color_overlay: 'rgba(50, 50, 50, 0.5)'
-  title: Expert Translation Services
+  industries:
+    - icon: /assets/images/upload/heart_font_awesome.svg.png
+      title: General
+  items:
+    - desc: Translator who passed our Standard level test.
+      expert: 1 Translator
+      name: STANDARD
+      price: $0.06
+      unit: per word
+    - desc: Standard level translator with one experienced proofreader
+      expert: 1 Translator <br/><br/>+<br/><br/>1 Proofreader
+      name: STANDARD
+      price: $0.044
+      unit: per word
+    - desc: Expert translator who passed our advanced level test
+      expert: 1 Expert Translator
+      name: PROFESSIONAL
+      price: $0.056
+      unit: per word
+    - desc: Expert level translator with one advanced level proofreader
+      expert: 1 Expert Translator <br/><br/>+<br/><br/>1 Proofreader
+      name: PROFESSIONAL PLUS
+      price: $0.072
+      unit: per word
+  sources:
+    - icon: /assets/images/upload/heart_font_awesome.svg.png
+      title: Vietnamese
+  targets:
+    - icon: /assets/images/upload/heart_font_awesome.svg.png
+      title: Vietnamese
   text: >-
     As experts in Vietnamese, our certified legal translators and reviewers will
     accurately translate sensitive legal materials into your desired language.
+  title: Expert Translation Services
   visible: true
-  button:
-    name: 'Order Now'
-    link: '#'
-  sources:
-  - icon: /assets/images/upload/heart_font_awesome.svg.png
-    title: Vietnamese
-  targets:
-  - icon: /assets/images/upload/heart_font_awesome.svg.png
-    title: Vietnamese
-  industries:
-  - icon: /assets/images/upload/heart_font_awesome.svg.png
-    title: General
-  items:
-  - name: STANDARD
-    price: $0.044
-    unit: per word
-    expert: '1 Translator'
-    desc: Translator who passed our Standard level test.
-  - name: STANDARD
-    price: $0.044
-    unit: per word
-    expert: '1 Translator <br/><br/>+<br/><br/>1 Proofreader'
-    desc: Standard level translator with one experienced proofreader
-  - name: PROFESSIONAL
-    price: $0.056
-    unit: per word
-    expert: 1 Expert Translator
-    desc: Expert translator who passed our advanced level test
-  - name: PROFESSIONAL PLUS
-    price: $0.072
-    unit: per word
-    expert: '1 Expert Translator <br/><br/>+<br/><br/>1 Proofreader'
-    desc: Expert level translator with one advanced level proofreader
 block_2:
-  background_image: 
   color_overlay: 'rgba(50, 50, 50, 0)'
-  visible: true
+  items:
+    - name: SMALL
+      price_1: $500
+      price_2: $20
+    - name: LARGE
+      price_1: $500
+      price_2: $20
+    - name: X LARGE
+      price_1: $500
+      price_2: $20
+    - name: XXL
+      price_1: $500
+      price_2: $20
   title: Save money with bundle offers
-  button:
-    name: 'BUY NOW'
-    link: '#'
-  items:
-  - name: 'SMALL'
-    price_1: '$500'
-    price_2: '$20'
-  - name: 'LARGE'
-    price_1: '$500'
-    price_2: '$20'
-  - name: 'X LARGE'
-    price_1: '$500'
-    price_2: '$20'
-  - name: 'XXL'
-    price_1: '$500'
-    price_2: '$20'
-block_3:
-  background_image: 
-  color_overlay: 'rgba(50, 50, 50, 0)'
   visible: true
+block_3:
+  color_overlay: 'rgba(50, 50, 50, 0)'
   items:
-  - icon: '/assets/images/upload/rapid-icon-9.png'
-    text: '### App
-
-    1500 Words
-    
-    Starts from
-
-    ### $75'
-  - icon: '/assets/images/upload/rapid-icon-9.png'
-    text: '### App
-
-    1500 Words
-    
-    Starts from
-
-    ### $75'
-  - icon: '/assets/images/upload/rapid-icon-9.png'
-    text: '### App
-
-    1500 Words
-    
-    Starts from
-
-    ### $75'
-  - icon: '/assets/images/upload/rapid-icon-9.png'
-    text: '### App
-
-    1500 Words
-    
-    Starts from
-
-    ### $75'
-  - icon: '/assets/images/upload/rapid-icon-9.png'
-    text: '### App
-
-    1500 Words
-    
-    Starts from
-
-    ### $75'
+    - icon: /assets/images/upload/rapid-icon-9.png
+      text: |-
+        ### App
+        1500 Words
+        Starts from
+        ### $75
+    - icon: /assets/images/upload/rapid-icon-9.png
+      text: |-
+        ### App
+        1500 Words
+        Starts from
+        ### $75
+    - icon: /assets/images/upload/rapid-icon-9.png
+      text: |-
+        ### App
+        1500 Words
+        Starts from
+        ### $75
+    - icon: /assets/images/upload/rapid-icon-9.png
+      text: |-
+        ### App
+        1500 Words
+        Starts from
+        ### $75
+    - icon: /assets/images/upload/rapid-icon-9.png
+      text: |-
+        ### App
+        1500 Words
+        Starts from
+        ### $75
+  visible: true
