--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -4,31 +4,31 @@ block_1:
       title: Legal
     - link: 'https://www.jndctranslation.com/pages/financial'
       title: 'Financial '
-    - link: 'https://www.jndctranslation.com/pages/manufacturing_engineering'
-      title: 'Manufacturing & Engineering '
     - link: 'https://www.jndctranslation.com/pages/it_software'
       title: IT and Software
     - link: 'https://www.jndctranslation.com/pages/blockchain_crypto'
       title: Blockchain & Crypto
-    - link: 'https://www.jndctranslation.com/pages/mobile_video_game'
-      title: Mobile & Video Games
     - link: 'https://www.jndctranslation.com/pages/retail_e_commerce'
       title: Retail & E-Commerce
+    - link: 'https://www.jndctranslation.com/pages/mobile_video_game'
+      title: Mobile & Video Games
+    - link: 'https://www.jndctranslation.com/pages/manufacturing_engineering'
+      title: 'Manufacturing & Engineering '
   title: Industries
 block_2:
   items:
-    - link: 'https://www.jndctranslation.com/pages/about'
-      title: Who We Are?
     - link: 'https://www.jndctranslation.com/pages/about'
       title: Our Vision
     - link: 'https://www.jndctranslation.com/pages/about'
       title: Our Values
     - link: 'https://www.jndctranslation.com/pages/about'
-      title: Who Are We?
+      title: Who We Are?
     - link: 'https://www.jndctranslation.com/pages/about'
-      title: What Do We Believe?
+      title: How Do We Do?
     - link: 'https://www.jndctranslation.com/pages/about'
       title: Our Translation Team
+    - link: 'https://www.jndctranslation.com/pages/about'
+      title: What Do We Believe?
   title: About JNDC Translation
 block_3:
   items:
