Update Website  Common Information “footer”

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -29,7 +29,7 @@ block_2:
       title: Our Translation Team
     - link: 'https://www.jndctranslation.com/pages/about'
       title: What Do We Believe?
-  title: About JNDC Translation
+  title: About Us
 block_3:
   items:
     - link: 'https://www.jndctranslation.com/pages/translation_services'
