Update Website  Common Information “footer”

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -14,7 +14,7 @@ block_1:
       title: Mobile & Video Games
     - link: 'https://www.jndctranslation.com/pages/manufacturing_engineering'
       title: 'Manufacturing & Engineering '
-  title: Industries
+  title: Translation Industries
 block_2:
   items:
     - link: 'https://www.jndctranslation.com/pages/about'
